--- a/src/style/LeftMenu.css
+++ b/src/style/LeftMenu.css
@@ -1,4 +1,5 @@
 .widget {
+    z-index: -1;
     position: fixed;
     top:100px;
     width: 150px;
@@ -36,3 +37,4 @@
     transition: .3s linear;
 }
 .widget-list a:hover {color: #f1c40c ;}
+
